--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "nette/schema",
-	"description": "📐 Nette Schema: validating data structures against a given Schema.",
+	"name": "davtk/nette-schema-reflection",
+	"description": "Tuned Nette Schema",
 	"keywords": ["nette", "config"],
 	"homepage": "https://nette.org",
 	"license": ["BSD-3-Clause", "GPL-2.0-only", "GPL-3.0-only"],
@@ -15,11 +15,11 @@
 		}
 	],
 	"require": {
-		"php": ">=7.1 <8.3",
-		"nette/utils": "^2.5.7 || ^3.1.5 ||  ^4.0"
+		"php": ">=8.1 <8.3",
+		"nette/utils": "^3.1.5 ||  ^4.0"
 	},
 	"require-dev": {
-		"nette/tester": "^2.3 || ^2.4",
+		"nette/tester": "^2.4",
 		"tracy/tracy": "^2.7",
 		"phpstan/phpstan-nette": "^1.0"
 	},
